<resources>
    <string name="app_name">मेरी डेयरी</string>
    <string name="app_id">ca-app-pub-6381924771123547~5294964685</string>
    <string name="customer_app_id">ca-app-pub-6381924771123547/3107391837</string>
    <string name="banner_unit_id">ca-app-pub-6381924771123547/1244039030</string>
    <string name="interstitialAd_unit_id">ca-app-pub-6381924771123547/4811847941</string>
    <string name="rewarded_video">ca-app-pub-6381924771123547/3659560131</string>
    <string name="poweredByB2infosoft">Powered By B2infosoft</string>
    <string name="google_location_key1" templateMergeStrategy="preserve" translatable="false">AIzaSyDKZk2naZ8z8iEahpq_GhwwzX-l5yDwjoc</string>
    <string name="firebaseDBKey">AIzaSyBqe5jBuWFK0bkfSop_cDRT-iSLWPCaBQ4</string>
    <string name="firebaseUrl">https://meridairy-25d2d.firebaseio.com/users.json</string>
    <string name="notification_channel_id">default</string>
    <string name="Poppins_Regular">Poppins-Regular</string>
    <string name="Roboto_Regular">Roboto-Regular</string>
    <string name="Roboto_Bold">Roboto-Bold</string>
    <string name="OpenSans_Regular">OpenSans-Regular</string>
    <string name="change_language">Change Language</string>
    <string name="lang">भाषा</string>
    <string name="select">Select</string>
    <string name="english">English</string>
    <string name="spanish">española</string>
    <string name="hindi">हिंदी</string>
    <string name="gujrati">ગુજરાતી</string>
    <string name="marathi">मराठी</string>
    <string name="punjabi">ਪੰਜਾਬੀ</string>
    <string name="telugu">తెలుగు</string>
    <string name="tamil">தமிழ்</string>
    <string name="kannad">ಕನ್ನಡ</string>
    <string-array name="language">
        <item>@string/english</item>
        <item>@string/spanish</item>
        <item>@string/hindi</item>
        <item>@string/gujrati</item>
        <item>@string/marathi</item>
        <item>@string/punjabi</item>
        <item>@string/telugu</item>
        <item>@string/tamil</item>
        <item>@string/kannad</item>
    </string-array>
    <string-array name="anim_cat">
        <item>@string/select</item>
        <item>@string/Buff</item>
        <item>@string/Cow</item>

    </string-array>
    <string name="WhatsAppSmssettings">WhatsApp/Sms settings</string>
    <string name="dairy_Address">Dairy Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="AreYouUsingWhatsappBusiness">Are You Using Whatsapp Business? </string>
    <string name="Deshbord">Dashboard</string>
    <string name="Add_Milk_Entry">Add Milk Entry</string>
    <string name="View_Entry_By_Date">View Entry By Date</string>
    <string name="Customer">Customer</string>
    <string name="Customers">Customers</string>
    <string name="Products">Products</string>
    <string name="transactions">Transactions</string>
    <string name="Sale_Product">Sell Product</string>
    <string name="MILK_Sale">Milk Sell</string>
    <string name="CreateAdvertise">Create Advertisement</string>
    <string name="Setting">Setting</string>
    <string name="SNF_FAT_Chart"> SNF FAT Chart</string>
    <string-array name="nav_drawer_array">
        <item>@string/Deshbord</item>
        <item>@string/Profile</item>
        <item>@string/CreateAdvertise</item>
        <item>@string/navUpgradePrimium</item>
        <item>@string/myRequest</item>
        <item>@string/DeliveryBoy</item>
        <item>@string/View_All_Entry</item>
        <item>@string/MILK_HISTORY</item>
        <item>@string/Buyer</item>
        <item>@string/Order</item>
        <item>@string/Product</item>
        <item>@string/product_SaleAndBuy</item>
        
        <item>@string/Transaction</item>
        <item>@string/LEGALPOLICIES</item>
        <item>@string/share</item>
        <item>@string/Logout</item>
    </string-array>
    <string-array name="nav_array_product">
        <item>@string/Add_Product</item>
        <item>@string/Selling_History</item>
    </string-array>
    <string-array name="setting_update">
        <item>@string/Update_Rate</item>
        <item>@string/Print_And_Send_Message</item>
    </string-array>
    <string name="send_sms_off">Send SMS Off</string>
    <string name="sms_from_sim">SMS Send From SIM</string>
    <string name="sms_from_api">SMS Send From API</string>
    <string-array name="sms_sendtype">

        <item>@string/send_sms_off</item>
        <item>@string/sms_from_sim</item>
        <item>@string/sms_from_api</item>

    </string-array>
    <string name="logout_from_another_device">Logout from another device</string>
    <string name="error_field_required">This field is required</string>
    <string name="invalid_login_title">Session Expired</string>
    <string name="invalid_login_message">Your account is login in another mobile. Please again login.</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="whatsapp_support">Whatsapp Support</string>
    <string name="Select_Date">Select Date</string>
    <string name="MORNING">Morning</string>
    <string name="EVENING">Evening</string>
    <string name="ADD_ENTRY">Add Entry</string>
    <string name="SALE_MILK">Sell Milk</string>
    <string name="App_activation">APP ACTIVATION</string>
    <string name="YourAccountisActivated">Your Account is Activated</string>
    <string name="Please_enter_activation_key">Please enter activation key</string>
    <string name="Enter_6_digit_key">Enter 6 digit key</string>
    <string name="Activate">Activate</string>
    <string name="ActivateRequestTxt">अगर आपके पास ACTIVATION KEY नहीं है तो +919772196777 या 9772196666 पर सम्पर्क करे या WhatsApp करे l</string>
    <string name="Buyer">Buyer</string>
    <string name="Seller">Seller</string>
    <string name="ADD_Customer">Add Customer</string>
    <string name="Edit_Customer">Edit Customer</string>
    <string name="UPDATE">Update</string>
    <string name="Please_Enter_Customer_Name">Please Enter Customer Name</string>
    <string name="Please_Enter_Father_Name">Please Enter Father Name</string>
    <string name="please_fill_correct_mobile_number">Please fill correct mobile number</string>
    <string name="PleaseSelectCustomerType">Please Select Customer Type</string>
    <string name="Customer_Added_Successfully">Customer Added Successfully</string>
    <string name="Please_Enter_Milk_Rate">Please Enter Milk Rate</string>
    <string name="Rate_Updated_Successfully">Rate Updated Successfully</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Customer_ID">Customer ID</string>
    <string name="Payment_Register">Payment Register</string>
    <string name="Name">Name</string>
    <string name="Father_Name">Father Name</string>
    <string name="Address">Address</string>
    <string name="Adhar_Number">Adhar Number</string>
    <string name="Save">Save</string>
    <string name="Edit_Rate">Edit Rate</string>
    <string name="Rate_Per_KG">Rate Per KG</string>
    <string name="Save_Rate">Save Rate</string>
    <string name="MILK_ENTRY">Milk Entry</string>
    <string name="Please_Update_Milk_Rate_Type">Please Update Milk Rate Type.</string>
    <string name="Fixed_Price">Fixed Price</string>
    <string name="Rate_Not_Found">Rate Not Found</string>
    <string name="Please_Add_Complete_Entry">Please Add Complete Entry</string>
    <string name="Please_Update_SNF_Fat">Please Update either SNF or Fat</string>
    <string name="Offline_Entry_Successfully_Uploaded_to_Server">Offline Entry Successfully Uploaded to Server.</string>
    <string name="Entry_Uploading_Failed_Please_Try_again">Entry Uploading Failed, Please Try again.</string>
    <string name="Entry_Update_Successfully">Entry Update Successfully.</string>
    <string name="Entry_Updating_Failed">Entry Updating Failed.</string>
    <string name="Entry_Added_Successfully">Entry Added Successfully.</string>
    <string name="Entry_Adding_Failed">Entry Adding Failed.</string>
    <string name="Please_Add_Customer">Please Add Customer.</string>
    <string name="Average_Fat">Avg. Fat</string>
    <string name="Total_Weight">Total Weight</string>
    <string name="Total_Amount">Total Amount</string>
    <string name="ID">ID</string>
    <string name="User_all_info">User all info</string>
    <string name="Weight">Weight</string>
    <string name="Rs_Per_ltr">Rs./Ltr.</string>
    <string name="Fat">Fat</string>
    <string name="Total_Rs">Total Rs.</string>
    <string name="Week_Total_Rs">WEEK TOTAL RS.</string>
    <string name="SNF">SNF</string>
    <string name="SNF_CLR">SNF/CLR</string>
    <string name="Cow">Cow</string>
    <string name="Buff">Buffalo</string>
    <string name="Sr">Sr</string>
    <string name="Fat_SNF">Fat/SNF</string>
    <string name="Rate">Rate</string>
    <string name="Amount">Amount</string>
    <string name="Are_You_Sure_Want_To_Delete_Entry">Are You Sure Want To Delete ?</string>
    <string name="Entry_Deleted_Successfully">Entry Deleted Successfully</string>
    <string name="Entry_Deleting_Failed">Entry Deleting Failed</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Add_Product">Add Product</string>
    <string name="Product_Added_Successfully">Product Added Successfully</string>
    <string name="Product_Adding_Failed">Product Adding Failed</string>
    <string name="Product_Updated_Successfully">Product Updated Successfully</string>
    <string name="Product_Updating_failed">Product Updating failed</string>
    <string name="Products_List_is_Empty_Please_add_Any_Products">Products List is Empty.Please add Any Products</string>
    <string name="Product_Name">Product Name</string>
    <string name="Item">Item</string>
    <string name="Product_Deleted_Successfully">Product Deleted Successfully</string>
    <string name="Product_Deleting_Failed">Product Deleting Failed</string>
    <string name="Search_Here">Search Here</string>
    <string name="USER_LIST">User List</string>
    <string name="SELLER_BHUGTAN">Seller-Bhugtan</string>
    <string name="Meri_Dairy">Meri Dairy</string>
    <string name="Bonus">Bonus</string>
    <string name="Select">Select</string>
    <string name="BUYER_BHUGTAN">Buyer-Bhugtan</string>
    <string name="ERASE_MILK_HISTORY">Erase Milk History</string>
    <string name="Change_Password">Change Password</string>
    <string name="Update_Rate">Update Rate</string>
    <string name="RECEIVE_CASH">Receive Cash</string>
    <string name="TRANSACTION_HISTORY">Transaction History</string>
    <string name="View_All_Entry">View All Entry</string>
    <string name="Selling_History">Selling History</string>
    <string name="MILK_HISTORY">Milk History</string>
    <string name="Profile">Profile</string>
    <string name="Product">Product</string>
    <string name="Logout">Logout</string>
    <string name="print_sms">Print and Message</string>
    <string name="notification">Notification</string>
    <string name="MyOrder">My Order</string>
    <string name="navUpgradePrimium">Upgrade Premium (New)</string>
    <string name="LEGALPOLICIES">Legal Policies</string>
    <string name="navMyOrder">My Order</string>
    <string name="Description">Description</string>
    <string name="Price">Price</string>
    <string name="ViewInvoice">View Invoice</string>
    <string name="Home">Home</string>
    <string name="titleProfile">Profile</string>
    <string name="MyPlan">My Plan</string>
    <string name="group">Group</string>
    <string name="brand">Brand</string>
    <string name="tax">Tax</string>
    <string name="lowStockQuantity">Low Stock Quantity</string>
    <string name="openingQuantity">Opening Quantity</string>
    <string name="openingRate">Opening Rate</string>
    <string name="OpeningAmount">Opening Amount</string>
    <string name="unit">Unit</string>
    <string name="salePrice">Sell Price</string>
</resources>