<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/Home" />
    <item
        android:id="@+id/nav_milkHistory"
        android:icon="@drawable/ic_milk_history"
        android:title="@string/MILK_HISTORY" />
    <item
        android:id="@+id/nav_buymilk_plan"
        android:icon="@drawable/ic_buy"
        android:title="@string/MyPlan" />
    <item
        android:id="@+id/nav_MyOrder"
        android:icon="@drawable/ic_shopping"
        android:title="@string/MyOrder" />
    <item
        android:id="@+id/nav_view_invoice"
        android:icon="@drawable/ic_invoice"
        android:title="@string/ViewInvoice" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile_icon"
         android:title="@string/titleProfile" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout_customer"
        android:title="@string/Logout" />
</menu>
