<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="40dp"
    android:layout_marginTop="5dp"
    android:background="@color/colorPrimary"
    android:orientation="horizontal">

    <b2infosoft.milkapp.com.useful.CustomFontTextView

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="1dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/Sr"
        android:textColor="@color/colorWhite" />

    <b2infosoft.milkapp.com.useful.CustomFontTextView
                        

        android:layout_width="2dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="3dp"
        android:layout_weight="1.3"
        android:text="@string/Name"
        android:textAlignment="center"
        android:textColor="@color/colorWhite" />

    <b2infosoft.milkapp.com.useful.CustomFontTextView
                        

        android:layout_width="2dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="3dp"
        android:layout_weight="1"
        android:text="@string/Fat_SNF"
        android:textAlignment="center"
        android:textColor="@color/colorWhite" />

    <b2infosoft.milkapp.com.useful.CustomFontTextView
                        

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1.3"
        android:text="@string/Weight"
        android:textAlignment="center"
        android:textColor="@color/colorWhite" />

    <b2infosoft.milkapp.com.useful.CustomFontTextView
                        

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:text="@string/Rate"
        android:textAlignment="center"
        android:textColor="@color/colorWhite" />

    <b2infosoft.milkapp.com.useful.CustomFontTextView
                        

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:text="@string/Bonus"
        android:textAlignment="center"
        android:textColor="@color/colorWhite" />

    <b2infosoft.milkapp.com.useful.CustomFontTextView
                        
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:layout_marginRight="3dp"
        android:layout_weight="1.2"
        android:gravity="center_vertical"
        android:text="@string/Amount"
        android:textAlignment="center"
        android:textColor="@color/colorWhite" />
</LinearLayout>

