<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_gravity="center_vertical"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:id="@+id/toolbar"
        app:navigationIcon="@drawable/back_arrow"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/colorWhite"
        app:title="@string/notification"
        />
    <b2infosoft.milkapp.com.useful.CustomFontTextView
        android:id="@+id/tvNotifTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
         android:textStyle="bold"
        android:text="@string/Meri_Dairy"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <b2infosoft.milkapp.com.useful.CustomFontTextView
        android:id="@+id/tvNotifBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:autoLink="all"
        android:background="@drawable/textbox_rectangle_border_white"
        android:gravity="start|center"
        android:padding="@dimen/_5sdp"

        android:text="@string/Description"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_15sdp" />
</LinearLayout>